# heart-stroke-risk-stratification

./: 404.html  Dockerfile  README.md  heart-stroke-prediction.drawio  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: kaggle-cicd.yml  ml-training-ci.yml
00_getting_started/local_setup/: index.html
01_problem/problem_statement/: index.html
01_problem/success_criteria/: index.html
02_data/data_overview/: index.html
02_data/data_quality/: index.html
02_data/data_validation/: index.html
02_data/schema/: index.html
03_features/encoding/: index.html
03_features/feature_engineering/: index.html
03_features/missing_data/: index.html
04_modeling/evaluation/: index.html
04_modeling/experiments/: index.html
04_modeling/model_card/: index.html
05_system/api_spec/: index.html
05_system/architecture/: index.html
05_system/inference/: index.html
06_quality/monitoring/: index.html
06_quality/testing_strategy/: index.html
07_governance/risks/: index.html
07_governance/roadmap/: index.html
docs/: index.md
docs/00_getting_started/: local_setup.md
docs/05_system/: architecture.md
notebooks/: 01_01_Understanding_the_Problem_Statement.ipynb  01_02_Data_Quality_Correction.ipynb  02_01_Pre_Exploratory_Data_Analysis.ipynb  02_02_Clustering_Analysis.ipynb  02_03_Handling_Missing_Values.ipynb  02_04_Handling_Outliers.ipynb  02_06_Post_Exploratory_Data_Analysis.ipynb  03_Feature_Engineering.ipynb  04_00_Feature_Selection_Filter_Method.ipynb
search/: search_index.json
src/analyze/data_inspection/: inspector.py
src/exception/: base.py
src/heart_stroke_prediction/analyze/: basic_data_inspection.py
src/heart_stroke_prediction/analyze/data_correction/tests/: test_frequency_filter.py  test_row_correction.py
src/heart_stroke_prediction/analyze/feature_selection/: filter_methods.py
src/heart_stroke_prediction/analyze/missing_values/: describe.py  handler.py  visualize.py
src/heart_stroke_prediction/analyze/outlier/: detection.py  visualize.py
src/heart_stroke_prediction/data_correction/: schema_correction.py
src/heart_stroke_prediction/data_correction/tests/: conftest.py  test_column_correction.py
src/heart_stroke_prediction/logger/: __init__.py
src/heart_stroke_prediction/utils/: main_utils.py
tests/unit/: test_exception.py  test_utils.py
