[project]
name = "heart-stroke-prediction"
version = "0.1.0"
description = "The goal of this project is to provide a data-driven approach for early detection of stroke risks, which can potentially assist healthcare professionals in prioritizing patient care and preventive measures."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "catboost>=1.2.10",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
]
dve = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
prod = [
    "dill>=0.4.1",
    "python-dotenv>=1.2.2",
]
test = [
    "pytest>=9.0.3",
    "pytest-docker>=3.2.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]
python_files = [
  "test_*.py",
  "*_test.py"
]
